Debug Assert when using "cut through" option for Knife Project #58905

Closed
opened 2018-12-07 02:53:09 +01:00 by Roger B · 3 comments

System Information
Operating system: Win10
Graphics card: nVidia Quadro 600

Blender Version
Broken: 2.80 497a9ef7a3
Worked: (optional)

Short description of error
There's a debug assert when using the knife project "cut through" option. Would most likely be harmless in release builds it looks like.

Exact steps for others to reproduce the error

Open provided blend: knifeproj-bug.blend

Then:

  • Invoke Mesh -> Knife Project
  • Change redo setting to turn "Cut Through" on
  • Assert
MEM_freeN(visit_bitmap); // visit_bitmap is nullptr and triggers the debug assert in MEM_freeN

blender.exe!MEM_lockfree_freeN(void * vmemh) Line 137	C
blender.exe!BKE_editmesh_vertexCos_get(Depsgraph * depsgraph, BMEditMesh * em, Scene * scene, int * r_numVerts) Line 552	C
blender.exe!knifetool_init_bmbvh(KnifeTool_OpData * kcd) Line 2609	C
blender.exe!knifetool_init(bContext * C, KnifeTool_OpData * kcd, const bool only_select, const bool cut_through, const bool is_interactive) Line 2655	C
blender.exe!EDBM_mesh_knife(bContext * C, LinkNode * polys, bool use_tag, bool cut_through) Line 3032	C
**System Information** Operating system: Win10 Graphics card: nVidia Quadro 600 **Blender Version** Broken: 2.80 497a9ef7a39 Worked: (optional) **Short description of error** There's a debug assert when using the knife project "cut through" option. Would most likely be harmless in release builds it looks like. **Exact steps for others to reproduce the error** Open provided blend: [knifeproj-bug.blend](https://archive.blender.org/developer/F5862981/knifeproj-bug.blend) Then: - Invoke Mesh -> Knife Project - Change redo setting to turn "Cut Through" on - Assert ``` MEM_freeN(visit_bitmap); // visit_bitmap is nullptr and triggers the debug assert in MEM_freeN blender.exe!MEM_lockfree_freeN(void * vmemh) Line 137 C blender.exe!BKE_editmesh_vertexCos_get(Depsgraph * depsgraph, BMEditMesh * em, Scene * scene, int * r_numVerts) Line 552 C blender.exe!knifetool_init_bmbvh(KnifeTool_OpData * kcd) Line 2609 C blender.exe!knifetool_init(bContext * C, KnifeTool_OpData * kcd, const bool only_select, const bool cut_through, const bool is_interactive) Line 2655 C blender.exe!EDBM_mesh_knife(bContext * C, LinkNode * polys, bool use_tag, bool cut_through) Line 3032 C ```
Author

Added subscriber: @rboxman

Added subscriber: @rboxman

This issue was referenced by 0d4ec8a7a9

This issue was referenced by 0d4ec8a7a942e71bd97507d0833e457c6c0de16b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58905
No description provided.