Fix T58905: Knife project redo fails